--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "upload-coverage": "codecov",
         "semantic-release": "semantic-release"
     },
+    "peerDependencies": {
+        "firebase-admin": "^10.3.0 || ^11.3.0",
+        "firebase-functions": "^3.21.2 || ^4.1.0"
+    },
     "dependencies": {
-        "firebase-admin": "^10.3.0",
-        "firebase-functions": "^3.21.2",
         "ow": "^0.28.1"
     },
     "devDependencies": {
@@ -45,6 +47,8 @@
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "codecov": "^3.8.3",
+        "firebase-admin": "^11.3.0",
+        "firebase-functions": "^4.1.0",
         "istanbul": "^0.4.5",
         "lodash": "^4.17.21",
         "mocha": "^10.0.0",
