--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "semantic-release": "semantic-release"
     },
     "peerDependencies": {
-        "firebase-admin": "^10.3.0 || ^11.3.0",
-        "firebase-functions": "^3.21.2 || ^4.1.0"
+        "firebase-admin": "^11.3.0",
+        "firebase-functions": "^4.1.0"
     },
     "dependencies": {
         "ow": "^0.28.1"
